Verify and fix API comments
