# src/controllers/CommentController.ts
@@ -2,18 +2,32 @@ import { CommentService } from "../services/CommentService";
 import { ICommentService } from "../services/interfaces/ICommentService";
 import Container from 'typedi';
 import { Request, Response } from 'express';
+import { CourseService } from "../services/CourseService";
+import { ICourseService } from "../services/interfaces/ICourseService";
+import { EnrollmentService } from "../services/EnrollmentService";
+import { IEnrollmentService } from "../services/interfaces/IEnrollmentService";
+import { NotEnoughAuthority } from "../utils/CustomError";
 
 export class CommentController{
 	private commentService: ICommentService;
+	private courseService: ICourseService;
+	private enrollmentService: IEnrollmentService;
 
 	constructor() {
 		this.commentService = Container.get(CommentService);
+		this.courseService = Container.get(CourseService);
+		this.enrollmentService = Container.get(EnrollmentService);
 	}
 
     createComment = async (req: Request, res: Response) => {
         const userId = req.payload.userId;
-        const {lessonId, content} = req.body;
-        const comment = await this.commentService.createComment(userId, lessonId, content);
+        const {lessonId, parentId, content} = req.body;
+        // Check user is enrolled course
+        const course = await this.courseService.getCourseByLessonId(lessonId);
+        if (!await this.enrollmentService.isUserEnrollmentCourse(userId, course.id)) {
+            throw new NotEnoughAuthority('User is not enrolled course, can not comment!');
+        }
+        const comment = await this.commentService.createComment(userId, lessonId, parentId, content);
         return res.status(200).json({
             message: "successfully",
             data: comment,
