# swagger-api.yaml
@@ -1324,7 +1324,7 @@ paths:
   /comments:
     post:
       tags:
-        - note
+        - comment
       summary: Add new comment to lesson
       responses:
         '200':
@@ -1346,7 +1346,7 @@ paths:
   /comments/{commentId}: 
     put:
       tags:
-        - note
+        - comment
       summary: Updates a comment for user
       parameters:
         - name: commentId
@@ -1377,7 +1377,7 @@ paths:
         - bearerAuth: []
     delete:
       tags:
-        - note
+        - comment
       summary: Deletes a comment by commentId
       parameters:
         - name: commentId
